--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   </head>
   <body>
     <div id="root"></div>
-  </body>
+  <script type="text/javascript" src="/manifest.2dbcea6235694b251238.js"></script><script type="text/javascript" src="/vendor.2dbcea6235694b251238.js"></script><script type="text/javascript" src="/bundle.2dbcea6235694b251238.js"></script></body>
 </html>
